TestSuite/errors/err0272.pas
type TClass = static class
j: integer;
end;

begin
  
end.